--- a/Sesi 6 Tugas/README
+++ b/Sesi 6 Tugas/README
@@ -2,4 +2,6 @@ Maaf pak karena kendala device, saya belum bisa
 Mengumpulkan tugas saya karena memang saya belum
 Sempat mengerjakan nya pak 🙏
 Akan saya kerjakan secepat nya
+Adriq sudah cari cara agar bisa mengerjakan di hp,
+Tapi nihil pak hasil ny 🙏🙏
 //26 Maret 23 16.27
