--- a/Sesi 6 Tugas/README
+++ b/Sesi 6 Tugas/README
@@ -5,3 +5,7 @@ Akan saya kerjakan secepat nya
 Adriq sudah cari cara agar bisa mengerjakan di hp,
 Tapi nihil pak hasil ny 🙏🙏
 //26 Maret 23 16.27
+
+Alhamdulillah pak sudah beres, adriq meminjam laptop indah
+sudah di kumpulkan tugas nya 
+// 30 Maret 23 12:43
