--- a/Sesi 9/README
+++ b/Sesi 9/README
@@ -1,1 +1,5 @@
 Bismillah
+
+Rabu 10mei 08.34
+
+maaf pak baru mengirimkan file tugas nya karena saha baru memahami, bahkan hanya faham sebagian tugas nya
